Additions and fixes

--- a/journal/201807.md
+++ b/journal/201807.md
@@ -28,7 +28,7 @@ Dev activity stats for {month}: {x} active PRs, {x} master commits, {x} added an
 
 Hashrate: the month started at 40.5 and ended at 51.6 PH/s, with a low of 33.3 and a new all time high of 68.4 PH/s. F2Pool is leading with 40-45%, followed by the new BeePool at 15-25% and coinmine.pl at 18-23%.
 
-Staking: 30-day average ticket price is 92.6 DCR (-2.1). The price started the month at 94.6 and quickly retreated to month's low of 85 until 1860 tickets were bought within a single period (compared to target 720). This pushed the pool of tickets to 41970 (2.5% above target), which in turn caused 10 price increases in a row to the month's high of 100.4. This was the highest ticket price seen on the new ticket price algorithm that is in effect since Jul 2017. Second half of the month there was unusually low volatility between 92 and 94 DCR per ticket. Locked DCR held between 3.75 and 3.87 million or 46.6-48.0% of supply (+0.1% from previous peak).
+Staking: 30-day average ticket price is 92.6 DCR (-2.1). The price started the month at 94.6 and quickly retreated to month's low of 85 until 1,860 tickets were bought within a single period (compared to target 720). This pushed the pool of tickets to 41,970 (2.5% above target), which in turn caused 10 price increases in a row to the month's high of 100.4. This was the highest ticket price seen on the new ticket price algorithm that is in effect since Jul 2017. Second half of the month there was unusually low volatility between 92 and 94 DCR per ticket. Locked DCR held between 3.75 and 3.87 million or 46.6-48.0% of supply (+0.1% from previous peak).
 
 Nodes: there are 212 public listening and 216 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 67% on v1.2.0 (+10%), 24% on v1.1.2 (-1%), 7% on v1.1.0 (-7%). Node count data is not perfect but we can see the steady trend of upgrading to v1.2.0. This version of dcrd is notable for serving compact filters. The increased count of such full nodes allows the developers to test SPV client mode in preparations for the upcoming v1.3.0 release.
 
@@ -36,42 +36,30 @@ Nodes: there are 212 public listening and 216 normal nodes per [dcred.eu](https:
 
 Obelisk posted two updates: [first](https://www.reddit.com/r/ObeliskHQ/comments/8wlpr6/delivery_update_from_their_email/), [second](https://www.reddit.com/r/ObeliskHQ/comments/8zexyk/71618_delivery_update_from_their_email/).
 
-New miner from iBeLink: [DSM7T](https://ibelink.co/product/ibelink-dsm6t-blake256-miner-with-7-th-s-hash-rate/) pulls 2100 W and hashes Blake256 at 7 TH/s or Blake2b at 3.5 TH/s for $3,800, shipping Aug 5-10.
+New miner from iBeLink: [DSM7T](https://ibelink.co/product/ibelink-dsm6t-blake256-miner-with-7-th-s-hash-rate/) hashes Blake256 at 7 TH/s or Blake2b at 3.5 TH/s at 2,100 W for $3,800, shipping Aug 5-10.
 
-There were also speculations about the mysterious [Pangolin miner](https://pangolinminer.com/product/whatsminer-dcr/) with 44 TH/s at 2200 W and $3,888, shipping November. Let us know on the #pow-mining channel if you know anything about these.
+There were also speculations about the mysterious [Pangolin miner](https://pangolinminer.com/product/whatsminer-dcr/) with 44 TH/s at 2,200 W for $3,888, shipping November. If you know more please share with us in #pow-mining channel.
 
 # Integrations
 
-Meet new [stake pool](https://decred.org/stakepools/): [dcrpool.ibitlin.com](https://dcrpool.ibitlin.com/) operated by [@life](https://decred.slack.com/team/UB0P8MNDA) with 1% fees and 3 servers.
+Meet new [stake pool](https://decred.org/stakepools/): [dcrpool.ibitlin.com](https://dcrpool.ibitlin.com/) has 1% fees and is hosted by [@life](https://decred.slack.com/team/UB0P8MNDA).
 
 An interesting detail about [decredbrasil.com](https://decredbrasil.com/stats) stake pool was posted in chat:
 
-> emiliomann: stakebrasil is one of the pools with the lowest number of missed and expired tickets. It was one of the first and has a smaller percentage than the most recent ones who haven’t had the time to do so. (...) The Brazilian pool should be the one with the more servers spread around the world: 6 to decrease the latency. This is to explain to you why the rate of 5% (currently around 0.06 DCR) on the reward is also one of the highest.  
+> emiliomann: stakebrasil is one of the pools with the lowest number of missed and expired tickets. It was one of the first and has a smaller percentage than the most recent ones who haven’t had the time to do so. (...) The Brazilian pool should be the one with the more servers spread around the world: 6 to decrease the latency. This is to explain to you why the \[pool fee\] rate of 5% (currently around 0.06 DCR) on the reward is also one of the highest.  
 > girino: 8 voting wallets now. I just finished setting up a new one yesterday. All of them in different datacenters, 3 in europe, 3 in north america, 1 in brazil and one in asia. We also have 3 more servers, 1 for the front end, one for "stats" and one for dcrdata. ([#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153166757139590QIHHB:decred.org))
 
 On the mining side, Luxor [started](https://www.reddit.com/r/decred/comments/8xptci/luxor_tech_chinese_pools/) a new set of pool servers inside mainland China, while [zpool](https://www.zpool.ca/) has [enabled](https://twitter.com/_zpool_/status/1020751950327922689) Decred mining.
 
-Exchange integrations:
-
-* {}
-
-{new OTC}
-
-{payment processors, wallets}
+StatX [announced](https://twitter.com/statxapp/status/1021498097921388544) Decred integration into their live dashboard and public chat.
 
 # Adoption
-
-New merchants:
-
-* {}
 
 VotoLegal update:
 
 > Marina Silva is the first presidential candidate in Brazil using blockchain to keep all their electoral donations transparent and traceable. Votolegal uses Decred technology, awesome use case! ([reddit](https://www.reddit.com/r/decred/comments/8znzaq/votolegal_first_presidential_candidate_in_brazil/))
 
 The story was covered by [criptonoticias.com](https://www.criptonoticias.com/votaciones/candidata-presidencial-brasil-recaudara-fondos-campana-usando-blockchain-decred/) ([translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https://www.criptonoticias.com/votaciones/candidata-presidencial-brasil-recaudara-fondos-campana-usando-blockchain-decred/)) and [livecoins.com.br](https://livecoins.com.br/marina-silva-utilizando-blockchain-da-decred-para-deixar-transparente-o-financiamento-coletivo-de-sua-campanha-eleitoral/) ([translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https://livecoins.com.br/marina-silva-utilizando-blockchain-da-decred-para-deixar-transparente-o-financiamento-coletivo-de-sua-campanha-eleitoral/)), the latter received hundreds of upvotes and comments [on r/brasil](https://old.reddit.com/r/brasil/comments/8zv52w/marina_silva_utilizando_blockchain_da_decred_para/).
-
-StatX [announced](https://twitter.com/statxapp/status/1021498097921388544) Decred integration into their live dashboard and public chat.
 
 On the OTC trading front, @i2Rav from [i2trading](https://i2trading.com/) reports:
 
@@ -93,21 +81,19 @@ Attended:
 
 * [Presentation](https://twitter.com/DeCredBAB/status/1016754321940197376) in Austin, USA. {TODO: Confirm}
 * [Meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-currencies-core-chains-the-future-of-blockchain-governance-and-tickets-47586593783) in Berlin, Germany hosted by BlueYard Capital. @jz_bz and @lftherios discussed open source incentivization, the value of governance and their respective projects @decredproject and @oscoin. See @issedjur's feedback [here](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153225518942700Ojtns:decred.org). (photos: [1](https://twitter.com/DanielSchuHi/status/1019649576217858048), [2](https://twitter.com/theobtl/status/1019676848127664130))
-* [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA. @raedah's [talk](https://conferences.oreilly.com/oscon/oscon-or/public/schedule/detail/71553) was "Decentralizing decision-making on the blockchain". The Big Stakey entertained the public. Read @raedah's report [here](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153211410642097xnoCd:decred.org) (photos: [1](https://twitter.com/miket18087954/status/1019657304671567873), [2](https://twitter.com/miket18087954/status/1020099092792217601), [3](https://twitter.com/CoffeeSippa/status/1019700563955539968))
+* [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA. @raedah's [talk](https://conferences.oreilly.com/oscon/oscon-or/public/schedule/detail/71553) was "Decentralizing decision-making on the blockchain". Read @raedah's report [here](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153211410642097xnoCd:decred.org) and see on the photos how the Big Stakey was entertaining the public.  (photos: [1](https://twitter.com/miket18087954/status/1019657304671567873), [2](https://twitter.com/miket18087954/status/1020099092792217601), [3](https://twitter.com/CoffeeSippa/status/1019700563955539968))
 
   > oregonisaac: many open source devs at OSCON were VERY interested in Politeia and it was probably the #1 hook that resulted in lots of long conversations about what makes Decred unique from the ground up. ([#politeia](https://view.matrix.org/room/!VFRvyndKpzcLrVslQD:decred.org/?anchor=$153212685842246TYtJv:decred.org))
 * [Blockchain Meetup](https://www.meetup.com/Blockchain-Meetup-Faro-Algarve/events/252403886/) in Faro, Portugal. Marco Peereboom gave a talk "Decred 101" and answered questions.
 
 Upcoming:
 
-* [Meetup](https://www.meetup.com/Social-at-The-Block-Cafe/events/253103196/) in Lisbon, Portugal on Aug 2. @moo31337 and @mm will be presenting on Decred with talk "Decred 101 - Governance with skin in the game". Co-hosted by The Block Cafe, free entrance.
-* [Meetup](https://alysida.kktix.cc/events/b-c-meetup) in Taipei, Taiwan on Aug 5. @morphymore will give a short intro on Decred.
+* [Meetup](https://www.meetup.com/Social-at-The-Block-Cafe/events/253103196/) in Lisbon, Portugal on Aug 2. @moo31337 and @mm will be presenting on Decred with talk "Decred 101 - Governance with skin in the game". Co-hosted by The Block Cafe. Free entrance.
+* [Meetup](https://alysida.kktix.cc/events/b-c-meetup) in Taipei, Taiwan on Aug 5. @morphymore [will give]({tweet link}) a short intro on Decred.
 * [Blockchain & Decentralised Governance Panel](https://www.facebook.com/events/285036208715647/) in Melbourne, Australia on Aug 13. Hosted by YBF Ventures.
-* [Voice of Blockchain](https://chicagoblockchainproject.com/voice-of-blockchain/) in Chicago, USA on Aug 24-25. {get more info}
+* [Voice of Blockchain](https://chicagoblockchainproject.com/voice-of-blockchain/) in Chicago, USA on Aug 24-25. {get more info and/or link tweet}
 
 # Media
-
-{ratings news}
 
 Translations:
 
@@ -148,12 +134,12 @@ Videos:
 
 # Community Discussions
 
-Community stats: Twitter followers {} (+{}), Reddit subscribers {} (+{}), Slack users {} (+{}), GitHub {} stars and {} forks of dcrd repository.
+Community stats: Twitter followers 39,418 (-791), Reddit subscribers 8,512 (+102), Slack users 5,964 (+134), GitHub 404 stars (+12) and 977 forks (+59) of dcrd repository.
 
 Comm systems update:
 
-* We lost around 1k followers after another [Twitter purge](https://www.nytimes.com/2018/07/12/technology/twitter-followers-nyt.html).
-* r/decred was spam attacked. Randomly generated users submitted some coin ad 100+ times. Most were blocked by Reddit automatically, some made it through and were removed manually.
+* We lost around 1k followers after a [purge](https://www.nytimes.com/2018/07/12/technology/twitter-followers-nyt.html) of Twitter accounts.
+* r/decred was spam attacked for several days. Randomly generated users submitted some coin ad 100+ times. Most were blocked by Reddit automatically, some made it through and were removed manually.
 
 [#dex](https://view.matrix.org/room/!MfifnUCLrfSeRkMDwZ:decred.org/?anchor=$153041236730049nZJvN:decred.org&offset=-30) channel continues to attract thinkers and host chats about influence of exchanges, regulation, HFT, lot sizes, liquidity, on-chain vs off-chain swaps, to name a few topics. [#governance](https://decred.slack.com/messages/CAAMEU56W/) also keeps growing and hosting quality chats.
 
@@ -164,17 +150,19 @@ Articles:
 
 Forums: [using](https://www.reddit.com/r/Dcrtrader/comments/8rf7qp/dcr_trader_has_a_reddit_chat_now/) Reddit chat for r/dcrtrader, chat systems, Matrix; roadmap [concerns](https://www.reddit.com/r/decred/comments/8ws4ew/daes_and_roadmap_query/); {XCP GROUP insette https://www.reddit.com/r/decred/comments/90sdif/group_and_the_potential_of_pow_minervalidated/}.
 
-Chats: [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153090455433548QNlFj:decred.org) tickets don't have 100% chance to vote; [ideas](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153125687135698lmQRO:decred.org) for more straightforward marketing; long-running [chat](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153144666238238HtaLA:decred.org) about world economy and failure modes; @brandon's [thoughts]({}) on tokenizing everything, ICOs, securities, sidechains and more; [challenges](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153192145141235HURRx:decred.org) to staking with Trezor; [ideas](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153219648842589QqFwE:decred.org) how to use CryptoSteel wallet; [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153221763542646xEpak:decred.org) exchange can't stake your coins, how staking can increase security, why seed export from wallet is a bad idea and why dcrwallet doesn't ever store the seed; ticket voting [math](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153240577043548fppqA:decred.org); [discussion](https://view.matrix.org/room/!HEeJkbPRpAqgAwhXWO:decred.org/?anchor=$153304069846768SCrcO:decred.org) about how GitHub workflow forces to depend on modern web browser and possible alternatives.
+Chats: [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153090455433548QNlFj:decred.org) tickets don't have 100% chance to vote; [ideas](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153125687135698lmQRO:decred.org) for more straightforward marketing; long-running [chat](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153144666238238HtaLA:decred.org) about world economy and failure modes; @brandon's [thoughts]({}) on tokenizing everything, ICOs, securities, sidechains and more; [challenges](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153192145141235HURRx:decred.org) of staking with Trezor; [ideas](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153219648842589QqFwE:decred.org) how to use CryptoSteel wallet with Decred; [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153221763542646xEpak:decred.org) exchange can't stake your coins, how staking can increase security, why the function to export seed from wallet is bad idea and why dcrwallet doesn't ever store the seed; ticket voting [math](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153240577043548fppqA:decred.org); [discussion](https://view.matrix.org/room/!HEeJkbPRpAqgAwhXWO:decred.org/?anchor=$153304069846768SCrcO:decred.org) about how GitHub workflow forces to depend on modern web browser and possible alternatives.
 
 # Markets
 
-On Jul 24 Decred fell with most alts on Bitcoin's rise to $8k
+On Jul 24 Decred fell with most altcoins on Bitcoin's rise to $8,000.
+
+Volume boost of up to $10.5 m was noticed on Fex.
+
+{markets overview: USD and BTC prices, highs and lows, interesting events}
 
 WalletInvestor [posted](https://www.reddit.com/r/Dcrtrader/comments/8vhjfu/fundamentally_speaking_decred_is_one_of_the_best/) a prediction on r/dcrtrader.
 
-Price recovery started from a volume boost up to $10.5 m on Fex.
-
-Decred was noticed in top 10 mineable coins https://coinmarketcap.com/coins/views/filter-non-mineable/
+Decred was noticed in top 10 mineable coins [on coinmarketcap.com]( https://coinmarketcap.com/coins/views/filter-non-mineable/).
 
 # Relevant External
 
