--- a/journal/201807.md
+++ b/journal/201807.md
@@ -143,16 +143,16 @@ Comm systems update:
 * We lost around 1k followers after a [purge](https://www.nytimes.com/2018/07/12/technology/twitter-followers-nyt.html) of Twitter accounts.
 * r/decred was spam attacked for several days. Randomly generated users submitted some coin ad 100+ times. Most were blocked by Reddit automatically, some made it through and were removed manually.
 
-[#dex](https://view.matrix.org/room/!MfifnUCLrfSeRkMDwZ:decred.org/?anchor=$153041236730049nZJvN:decred.org&offset=-30) channel continues to attract thinkers and host chats about influence of exchanges, regulation, HFT, lot sizes, liquidity, on-chain vs off-chain swaps, to name a few topics. [#governance](https://decred.slack.com/messages/CAAMEU56W/) also keeps growing and hosting quality chats.
-
 Articles:
 
-* On-Chain Vote Buying and the Rise of Dark DAOs ([hackingdistributed.com](http://hackingdistributed.com/2018/07/02/on-chain-vote-buying/)). Discussion: [#general](https://decred.slack.com/archives/C0NRMDVMJ/p1530595796000041), [#governance](https://decred.slack.com/archives/CAAMEU56W/p1530611461000047), [#random](https://decred.slack.com/archives/C3PAYQJTW/p1530588819000180), [Reddit](https://www.reddit.com/r/decred/comments/8vrpy3/on_chain_vote_buying_and_the_rise_of_dark_daos/) and a timely [response article](https://medium.com/@richardred/response-to-on-chain-vote-buying-and-the-rise-of-dark-daos-b479deb37fb7) by Richard Red.
-* It's Too Soon for On-Chain Governance ([coindesk.com](https://www.coindesk.com/soon-chain-governance/)): [Reddit](https://www.reddit.com/r/decred/comments/8wdrsa/its_too_soon_for_onchain_governance_by_michael_j/).
+* On-Chain Vote Buying and the Rise of Dark DAOs ([hackingdistributed.com](http://hackingdistributed.com/2018/07/02/on-chain-vote-buying/)) received an accurate response on [Reddit](https://www.reddit.com/r/decred/comments/8vrpy3/on_chain_vote_buying_and_the_rise_of_dark_daos/) and received a timely [response article](https://medium.com/@richardred/response-to-on-chain-vote-buying-and-the-rise-of-dark-daos-b479deb37fb7) by Richard Red, in addition to discussion on [#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153059579631036HhqiK:decred.org), [#governance](https://decred.slack.com/archives/CAAMEU56W/p1530611461000047) and [#random](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153058882030989jOuuh:decred.org).
+* It's Too Soon for On-Chain Governance ([coindesk.com](https://www.coindesk.com/soon-chain-governance/)) discussed on [Reddit](https://www.reddit.com/r/decred/comments/8wdrsa/its_too_soon_for_onchain_governance_by_michael_j/).
 
 Forums: [using](https://www.reddit.com/r/Dcrtrader/comments/8rf7qp/dcr_trader_has_a_reddit_chat_now/) Reddit chat for r/dcrtrader, chat systems, Matrix; roadmap [concerns](https://www.reddit.com/r/decred/comments/8ws4ew/daes_and_roadmap_query/); {XCP GROUP insette https://www.reddit.com/r/decred/comments/90sdif/group_and_the_potential_of_pow_minervalidated/}. {more reddit}
 
 Chats: [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153090455433548QNlFj:decred.org) tickets don't have 100% chance to vote; [ideas](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153125687135698lmQRO:decred.org) for more straightforward marketing; long-running [chat](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153144666238238HtaLA:decred.org) about world economy and failure modes; @brandon's [thoughts](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153161313239389IqJUC:decred.org) on tokenizing everything, ICOs, securities, sidechains and more; [challenges](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153192145141235HURRx:decred.org) of staking with Trezor; [ideas](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153219648842589QqFwE:decred.org) how to use CryptoSteel wallet with Decred; [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153221763542646xEpak:decred.org) exchange can't stake your coins, how staking can increase security, why the function to export seed from wallet is bad idea and why dcrwallet doesn't ever store the seed; ticket voting [math](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153240577043548fppqA:decred.org); [discussion](https://view.matrix.org/room/!HEeJkbPRpAqgAwhXWO:decred.org/?anchor=$153304069846768SCrcO:decred.org) about how GitHub workflow forces to depend on modern web browser and possible alternatives; [funding](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153305558047047cLtXU:decred.org) marketing and education in developing markets, vetting contractors based on deliverables, "Decred contractor clearance", continued in [#governance](https://view.matrix.org/room/!tIDEIWechmqCLjPiui:decred.org/?anchor=$153321784148272BrmTU:decred.org).
+
+[#dex](https://view.matrix.org/room/!MfifnUCLrfSeRkMDwZ:decred.org/?anchor=$153041236730049nZJvN:decred.org&offset=-30) channel continues to attract thinkers and host chats about influence of exchanges, regulation, HFT, lot sizes, liquidity, on-chain vs off-chain swaps, to name a few topics. [#governance](https://decred.slack.com/messages/CAAMEU56W/) also keeps growing and hosting high quality conversations.
 
 # Markets
 
