--- a/journal/201807.md
+++ b/journal/201807.md
@@ -145,10 +145,10 @@ Comm systems update:
 
 Articles:
 
-* On-Chain Vote Buying and the Rise of Dark DAOs ([hackingdistributed.com](http://hackingdistributed.com/2018/07/02/on-chain-vote-buying/)) received an accurate response on [Reddit](https://www.reddit.com/r/decred/comments/8vrpy3/on_chain_vote_buying_and_the_rise_of_dark_daos/) and received a timely [response article](https://medium.com/@richardred/response-to-on-chain-vote-buying-and-the-rise-of-dark-daos-b479deb37fb7) by Richard Red, in addition to discussion on [#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153059579631036HhqiK:decred.org), [#governance](https://decred.slack.com/archives/CAAMEU56W/p1530611461000047) and [#random](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153058882030989jOuuh:decred.org).
+* On-Chain Vote Buying and the Rise of Dark DAOs ([hackingdistributed.com](http://hackingdistributed.com/2018/07/02/on-chain-vote-buying/)) received an accurate response by @davecgh on [Reddit](https://www.reddit.com/r/decred/comments/8vrpy3/on_chain_vote_buying_and_the_rise_of_dark_daos/) and a timely [response article](https://medium.com/@richardred/response-to-on-chain-vote-buying-and-the-rise-of-dark-daos-b479deb37fb7) by Richard Red, in addition to discussions in [#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153059579631036HhqiK:decred.org), [#governance](https://decred.slack.com/archives/CAAMEU56W/p1530611461000047) and [#random](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153058882030989jOuuh:decred.org).
 * It's Too Soon for On-Chain Governance ([coindesk.com](https://www.coindesk.com/soon-chain-governance/)) discussed on [Reddit](https://www.reddit.com/r/decred/comments/8wdrsa/its_too_soon_for_onchain_governance_by_michael_j/).
 
-Forums: [using](https://www.reddit.com/r/Dcrtrader/comments/8rf7qp/dcr_trader_has_a_reddit_chat_now/) Reddit chat for r/dcrtrader, chat systems, Matrix; roadmap [concerns](https://www.reddit.com/r/decred/comments/8ws4ew/daes_and_roadmap_query/); {XCP GROUP insette https://www.reddit.com/r/decred/comments/90sdif/group_and_the_potential_of_pow_minervalidated/}. {more reddit}
+Forums: [how](https://www.reddit.com/r/decred/comments/8wmpnf/is_the_average_staking_time_lower_if_there_are/) ticket pool size influences average vote time; roadmap [concerns](https://www.reddit.com/r/decred/comments/8ws4ew/daes_and_roadmap_query/); [why](https://www.reddit.com/r/decred/comments/8z46j5/why_have_ticket_prices_been_so_volatile_over_the/) ticket price was volatile; [ideas](https://www.reddit.com/r/Dcrtrader/comments/8rf7qp/dcr_trader_has_a_reddit_chat_now/) about using Reddit chat for r/dcrtrader, chat systems and Matrix protocol; {XCP GROUP insette https://www.reddit.com/r/decred/comments/90sdif/group_and_the_potential_of_pow_minervalidated/}. {more reddit}
 
 Chats: [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153090455433548QNlFj:decred.org) tickets don't have 100% chance to vote; [ideas](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153125687135698lmQRO:decred.org) for more straightforward marketing; long-running [chat](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153144666238238HtaLA:decred.org) about world economy and failure modes; @brandon's [thoughts](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153161313239389IqJUC:decred.org) on tokenizing everything, ICOs, securities, sidechains and more; [challenges](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153192145141235HURRx:decred.org) of staking with Trezor; [ideas](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153219648842589QqFwE:decred.org) how to use CryptoSteel wallet with Decred; [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153221763542646xEpak:decred.org) exchange can't stake your coins, how staking can increase security, why the function to export seed from wallet is bad idea and why dcrwallet doesn't ever store the seed; ticket voting [math](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153240577043548fppqA:decred.org); [discussion](https://view.matrix.org/room/!HEeJkbPRpAqgAwhXWO:decred.org/?anchor=$153304069846768SCrcO:decred.org) about how GitHub workflow forces to depend on modern web browser and possible alternatives; [funding](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153305558047047cLtXU:decred.org) marketing and education in developing markets, vetting contractors based on deliverables, "Decred contractor clearance", continued in [#governance](https://view.matrix.org/room/!tIDEIWechmqCLjPiui:decred.org/?anchor=$153321784148272BrmTU:decred.org).
 
@@ -172,13 +172,15 @@ DCR supply and market cap is now correct on onchainfx.com and finally, on coinma
 
 One million PCs in China were [infected](https://btcmanager.com/one-million-pcs-cryptojacked-in-china-as-hackers-make-2-million-worth-of-digibyte-siacoin-and-decred/) via browser plugins to mine Decred, Siacoin and Digibyte.
 
-@nic\_\_carter [published](https://twitter.com/nic__carter/status/1014174406711574528) slides from his [talk]({}) "An Overview of Governance in Blockchains" from Zcon0. {include governance definition from slide 9?}
-
-This [article](https://www.usv.com/blog/whats-next) arguing the importance of governance systems dates back to 2007.
-
 In a Unchained podcast [episode](http://unchained.forbes.libsynpro.com/why-asics-may-be-better-than-gpus-even-if-they-tend-toward-mining-centralization-ep67) David Vorick shared why ASICs are better than GPUs even if they tend toward mining centralization and also described Obelisk's new Launchpad servic. (missed in June issue)
 
 Fellow Sia [moved](https://blog.sia.tech/moving-to-gitlab-4140773b376f) to GitLab. The stated reasons are to avoid the risk of depending on centralized service, to avoid vendor lock-in, better continuous integration and testing, better access control and the general direction to support decentralized and open source projects.
+
+Luxor [explained](https://medium.com/@LuxorTechTeam/why-should-you-choose-a-pps-pool-5a71ee574478) why PPS pools are better.
+
+@nic\_\_carter [published](https://twitter.com/nic__carter/status/1014174406711574528) slides from his [talk](https://www.youtube.com/watch?v=D1NeTN_AR18) "An Overview of Governance in Blockchains" from Zcon0.
+
+This [article](https://www.usv.com/blog/whats-next) arguing the importance of governance systems dates back to 2007.
 
 Circle [announced](https://medium.com/circle-blog/announcing-the-official-poloniex-mobile-app-3114880449e1) official Poloniex mobile apps for iOS and Android.
 
