--- a/journal/201807.md
+++ b/journal/201807.md
@@ -90,6 +90,7 @@ Upcoming:
 
 * [Meetup](https://www.meetup.com/Social-at-The-Block-Cafe/events/253103196/) in Lisbon, Portugal on Aug 2. @moo31337 and @mm will be presenting on Decred with talk "Decred 101 - Governance with skin in the game". Co-hosted by The Block Cafe. Free entrance.
 * [Meetup](https://alysida.kktix.cc/events/b-c-meetup) in Taipei, Taiwan on Aug 5. @morphymore [will give](https://twitter.com/morphymore/status/1024844774442856448) a short intro on Decred.
+* [OKEx Global Meetup Tour](https://www.eventbrite.hk/e/okex-global-meetup-tour-2018-vietnam-tickets-48107057504) in Ho Chi Minh City, Vietnam on Aug 9. 
 * [Blockchain & Decentralised Governance Panel](https://www.facebook.com/events/285036208715647/) in Melbourne, Australia on Aug 13. Hosted by YBF Ventures.
 * [Voice of Blockchain](https://chicagoblockchainproject.com/voice-of-blockchain/) in Chicago, USA on Aug 24-25. {get more info}
 
@@ -145,10 +146,10 @@ Comm systems update:
 
 Articles:
 
-* On-Chain Vote Buying and the Rise of Dark DAOs ([hackingdistributed.com](http://hackingdistributed.com/2018/07/02/on-chain-vote-buying/)) received an accurate response by @davecgh on [Reddit](https://www.reddit.com/r/decred/comments/8vrpy3/on_chain_vote_buying_and_the_rise_of_dark_daos/) and a timely [response article](https://medium.com/@richardred/response-to-on-chain-vote-buying-and-the-rise-of-dark-daos-b479deb37fb7) by Richard Red, in addition to discussions in [#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153059579631036HhqiK:decred.org), [#governance](https://decred.slack.com/archives/CAAMEU56W/p1530611461000047) and [#random](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153058882030989jOuuh:decred.org).
+* On-Chain Vote Buying and the Rise of Dark DAOs ([hackingdistributed.com](http://hackingdistributed.com/2018/07/02/on-chain-vote-buying/)) received an accurate [comment](https://www.reddit.com/r/decred/comments/8vrpy3/on_chain_vote_buying_and_the_rise_of_dark_daos/) by @davecgh on Reddit and a timely [response article](https://medium.com/@richardred/response-to-on-chain-vote-buying-and-the-rise-of-dark-daos-b479deb37fb7) by Richard Red, in addition to discussions in [#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153059579631036HhqiK:decred.org), [#governance](https://decred.slack.com/archives/CAAMEU56W/p1530611461000047) and [#random](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153058882030989jOuuh:decred.org).
 * It's Too Soon for On-Chain Governance ([coindesk.com](https://www.coindesk.com/soon-chain-governance/)) discussed on [Reddit](https://www.reddit.com/r/decred/comments/8wdrsa/its_too_soon_for_onchain_governance_by_michael_j/).
 
-Forums: [how](https://www.reddit.com/r/decred/comments/8wmpnf/is_the_average_staking_time_lower_if_there_are/) ticket pool size influences average vote time; roadmap [concerns](https://www.reddit.com/r/decred/comments/8ws4ew/daes_and_roadmap_query/); [why](https://www.reddit.com/r/decred/comments/8z46j5/why_have_ticket_prices_been_so_volatile_over_the/) ticket price was volatile; [ideas](https://www.reddit.com/r/Dcrtrader/comments/8rf7qp/dcr_trader_has_a_reddit_chat_now/) about using Reddit chat for r/dcrtrader, chat systems and Matrix protocol; {XCP GROUP insette https://www.reddit.com/r/decred/comments/90sdif/group_and_the_potential_of_pow_minervalidated/}. {more reddit}
+Forums: [how](https://www.reddit.com/r/decred/comments/8wmpnf/is_the_average_staking_time_lower_if_there_are/) ticket pool size influences average vote time; roadmap [concerns](https://www.reddit.com/r/decred/comments/8ws4ew/daes_and_roadmap_query/); [why](https://www.reddit.com/r/decred/comments/8z46j5/why_have_ticket_prices_been_so_volatile_over_the/) ticket price was volatile; [ideas](https://www.reddit.com/r/Dcrtrader/comments/8rf7qp/dcr_trader_has_a_reddit_chat_now/) about using Reddit chat for r/dcrtrader, chat systems and Matrix protocol; insette's [write-up](https://www.reddit.com/r/decred/comments/90sdif/group_and_the_potential_of_pow_minervalidated/) on Andrew Stone's GROUP proposal for miner-validated tokenization that is superior to current OP_RETURN-based used schemes; James Liu's [paper](https://www.reddit.com/r/decred/comments/91ckg8/extending_atomic_swaps_to_financial_derivatives/) to extend atomic swaps to financial derivatives; [what happens](https://www.reddit.com/r/decred/comments/91tryl/what_happens_after_all_dcrs_are_mined/) when all DCR are mined, tail emission and incentives for miners.
 
 Chats: [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153090455433548QNlFj:decred.org) tickets don't have 100% chance to vote; [ideas](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153125687135698lmQRO:decred.org) for more straightforward marketing; long-running [chat](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153144666238238HtaLA:decred.org) about world economy and failure modes; @brandon's [thoughts](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153161313239389IqJUC:decred.org) on tokenizing everything, ICOs, securities, sidechains and more; [challenges](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153192145141235HURRx:decred.org) of staking with Trezor; [ideas](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153219648842589QqFwE:decred.org) how to use CryptoSteel wallet with Decred; [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153221763542646xEpak:decred.org) exchange can't stake your coins, how staking can increase security, why the function to export seed from wallet is bad idea and why dcrwallet doesn't ever store the seed; ticket voting [math](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153240577043548fppqA:decred.org); [discussion](https://view.matrix.org/room/!HEeJkbPRpAqgAwhXWO:decred.org/?anchor=$153304069846768SCrcO:decred.org) about how GitHub workflow forces to depend on modern web browser and possible alternatives; [funding](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153305558047047cLtXU:decred.org) marketing and education in developing markets, vetting contractors based on deliverables, "Decred contractor clearance", continued in [#governance](https://view.matrix.org/room/!tIDEIWechmqCLjPiui:decred.org/?anchor=$153321784148272BrmTU:decred.org).
 
