--- a/journal/201807.md
+++ b/journal/201807.md
@@ -157,15 +157,11 @@ Chats: [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor
 
 # Markets
 
-On Jul 24 Decred fell with most altcoins on Bitcoin's rise to $8,000.
-
-Volume boost of up to $10.5 m was noticed on Fex.
-
-{markets overview: USD and BTC prices, highs and lows, interesting events}
+In July DCR was trading in USD 56-76 and BTC 0.0072-0.0109 range. A recovery started after a volume boost of up to $10.5 m on Fex around Jul 13, but once Bitcoin headed towards USD ~8,000 DCR declined along with most altcoins.
 
 WalletInvestor [posted](https://www.reddit.com/r/Dcrtrader/comments/8vhjfu/fundamentally_speaking_decred_is_one_of_the_best/) a prediction on r/dcrtrader.
 
-Decred was noticed in top 10 mineable coins [on coinmarketcap.com]( https://coinmarketcap.com/coins/views/filter-non-mineable/).
+Decred was noticed in top 10 mineable coins [on coinmarketcap.com](https://coinmarketcap.com/coins/views/filter-non-mineable/).
 
 # Relevant External
 
