--- a/journal/201807.md
+++ b/journal/201807.md
@@ -191,7 +191,7 @@ Most information from third parties is relayed directly from source after a mini
 
 We continue transitioning to use chat links to Matrix web view. One UX inconvenience in the web viewer is that it always shows linked message at the bottom (highlighted in yellow) and you have to click "Show newer messages" to read on. This is filed as bug [here](https://github.com/t3chguy/matrix-static/issues/60).
 
-In the previous issue we introduced "Featured articles". The judgement is subjective by definition, if you feel unfairness or want to debate the criteria please check [this issue]({}).
+In the previous issue we introduced "Featured articles". The judgement is subjective by definition, if you feel unfairness or want to debate the criteria please check [this issue](https://github.com/xaur/decred-news/issues/21).
 
 Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) or [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/).
 
