--- a/journal/201807.md
+++ b/journal/201807.md
@@ -96,11 +96,6 @@ Upcoming:
 
 # Media
 
-Translations:
-
-* Placeholder's Decred Investment Thesis in [Russian](https://medium.com/decred-russia/%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D1%8B-%D0%B8%D0%BD%D0%B2%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%B2-decred-bd758502b5b1) by @DZ
-* A new kind of DEX in [Portuguese](https://stakey.club/um-novo-tipo-de-dex/) by @mm
-
 Featured articles:
 
 * Decred’s hybrid protocol, a superior deterrent to majority attacks by Zubair Zia ([medium](https://medium.com/decred/decreds-hybrid-protocol-a-superior-deterrent-to-majority-attacks-9421bf486292))
@@ -109,7 +104,6 @@ Featured articles:
 * Decentralized blockchain network governance is the biggest challenge by Mi Sun Silvia Cho ([medium](https://medium.com/@misunsilviacho/decentralized-blockchain-network-governance-is-the-biggest-challenge-9b6c613dd591))
 * Is plutocratic on-chain governance really a bad thing? by Lanre Ige ([medium](https://medium.com/mosaic-network-blog/is-plutocratic-on-chain-governance-really-a-bad-thing-68132700205c))
 * Solutions without Historical Templates: Cryptocurrencies and Blockchains by Charles Hugh Smith ([oftwominds.com](https://www.oftwominds.com/blogjuly18/crypto-solutions7-18.html), also published on [zerohedge.com](https://www.zerohedge.com/news/2018-07-18/solutions-without-historical-templates-cryptocurrencies-and-blockchains))
-* Decred review ([ultimatemoney.com.au](https://www.ultimatemoney.com.au/decred-review/))
 * Decred Is The Bitcoin You Wished BTC Could Be by Andrew Macdonald ([cryptobriefing.com](https://cryptobriefing.com/decred-bitcoin-plus-autonomy/))
 
 Articles:
@@ -122,12 +116,18 @@ Articles:
 * Coin Highlight #5: Decred, the self-governed crypto with voting system (Dutch, [bitcoinmagazine.nl](https://bitcoinmagazine.nl/2018/07/coin-highlight-5-decred-dcr-de-zichzelf-aansturende-crypto-met-voor-iedereen-een-stem/))
 * Where can you safely buy Decred? (Dutch, [cryptotips.eu](https://cryptotips.eu/cryptocurrency/decred-kopen/))
 * The Playbook for Crypto Community Building by Spencer Noon ([tokendaily.co](https://www.tokendaily.co/blog/the-playbook-for-crypto-community-building))
+* Decred review ([ultimatemoney.com.au](https://www.ultimatemoney.com.au/decred-review/))
 * Trade Recommendation: Decred ([hacked.com](https://hacked.com/trade-recommendation-decred-2/))
 * Finding The Best Decred Pools: Complete Beginners Guide ([coinbureau.com](https://www.coinbureau.com/mining/best-decred-pools/))
 * What is Decred? ([disruptblock.com](https://disruptblock.com/cryptocurrency/what-is-decred-dcr/))
 * Decred Demystified: A Beginner’s Guide ([bcfocus.com](https://bcfocus.com/cryptocurrency-analysis/decred-dcr-demystified-a-beginners-guide/19813/))
 
-Note that some articles are omitted due to low quality or factual errors.
+Some articles are omitted due to low quality or factual errors.
+
+Translations:
+
+* Placeholder's Decred Investment Thesis in [Russian](https://medium.com/decred-russia/%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D1%8B-%D0%B8%D0%BD%D0%B2%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%B2-decred-bd758502b5b1) by @DZ
+* A new kind of DEX in [Portuguese](https://stakey.club/um-novo-tipo-de-dex/) by @mm
 
 Videos:
 
