More github links

--- a/journal/201807.md
+++ b/journal/201807.md
@@ -16,11 +16,11 @@
 
 Trezor: Decrediton integration of initial Trezor support is [in progress](https://github.com/decred/decrediton/pull/1547) and there is a [demo](https://twitter.com/matheusd_tech/status/1019324637954658304).
 
-Android: app design version 2.0 [completed](https://xd.adobe.com/view/336d6bf4-d220-4388-a795-4012bab46cee).
+[Android](https://github.com/decred/dcrandroid): app design version 2.0 [completed](https://xd.adobe.com/view/336d6bf4-d220-4388-a795-4012bab46cee).
 
 [dcrdata](https://github.com/decred/dcrdata): development of several chart visualizations was completed and is awaiting deployment. Specifically, [voting agendas](https://github.com/decred/dcrdata/pull/523) and [historic charts](https://github.com/decred/dcrdata/pull/463) are merged while [ticket pool visualization](https://github.com/decred/dcrdata/pull/542) is in testing.
 
-atomicswap: @glendc is seeking reviews of his Ethereum support [pull request](https://github.com/decred/atomicswap/pull/76).
+[atomicswap](https://github.com/decred/atomicswap): @glendc is seeking reviews of his Ethereum support [pull request](https://github.com/decred/atomicswap/pull/76).
 
 Dev activity stats for July: 252 active PRs, 220 master commits, 34,754 added and 12,847 deleted lines spread across 6 repositories. Contributions came from 6-10 developers per repository. ([chart](https://twitter.com/decredproject/status/1025036517683519488))
 
