Replace view.matrix.org links with riot.im links

--- a/journal/201807.md
+++ b/journal/201807.md
@@ -8,7 +8,7 @@
 
 [dcrwallet](https://github.com/decred/dcrwallet): A big [change](https://github.com/decred/dcrwallet/pull/1213) introducing optional privacy-preserving SPV sync mode was merged. In this mode dcrwallet does not download the full blockchain but only gets the "filters", uses them to determine which blocks it needs and fetches them from random nodes on the network. This has on-disk footprint of 300-400 MB and sync time of minutes, compared to ~3.4 GB and sync time of hours for full sync (these are rough estimates).
 
-> jy-p: the server side of SPV (in dcrd) was deployed in v1.2.0, the client side of SPV (in dcrwallet) is in our next release, v1.3.0. Still some minor bugs in SPV that are being worked out. There will be an update to add the latest features from BIP [157](https://github.com/bitcoin/bips/blob/master/bip-0157.mediawiki)/[158](https://github.com/bitcoin/bips/blob/master/bip-0158.mediawiki) in the next few months. SPV will be optional in v1.3.0, but it will become the default after we get a proper [header commitment](https://github.com/decred/dcrd/issues/971) for it ([#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153279679446089MPegE:decred.org))
+> jy-p: the server side of SPV (in dcrd) was deployed in v1.2.0, the client side of SPV (in dcrwallet) is in our next release, v1.3.0. Still some minor bugs in SPV that are being worked out. There will be an update to add the latest features from BIP [157](https://github.com/bitcoin/bips/blob/master/bip-0157.mediawiki)/[158](https://github.com/bitcoin/bips/blob/master/bip-0158.mediawiki) in the next few months. SPV will be optional in v1.3.0, but it will become the default after we get a proper [header commitment](https://github.com/decred/dcrd/issues/971) for it ([#general](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153279679446089MPegE:decred.org))
 
 [Decrediton](https://github.com/decred/decrediton): besides regular bugfixes and design improvements, several components are being developed in parallel like SPV mode, Politeia integration and Trezor support.
 
@@ -47,7 +47,7 @@ Meet new [stake pool](https://decred.org/stakepools/): [dcrpool.ibitlin.com](htt
 An interesting detail about [decredbrasil.com](https://decredbrasil.com/stats) stake pool was posted in chat:
 
 > emiliomann: stakebrasil is one of the pools with the lowest number of missed and expired tickets. It was one of the first and has a smaller percentage than the most recent ones who haven’t had the time to do so. (...) The Brazilian pool should be the one with the more servers spread around the world: 6 to decrease the latency. This is to explain to you why the \[pool fee\] rate of 5% (currently around 0.06 DCR) on the reward is also one of the highest.  
-> girino: 8 voting wallets now. I just finished setting up a new one yesterday. All of them in different datacenters, 3 in europe, 3 in north america, 1 in brazil and one in asia. We also have 3 more servers, 1 for the front end, one for "stats" and one for dcrdata. ([#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153166757139590QIHHB:decred.org))
+> girino: 8 voting wallets now. I just finished setting up a new one yesterday. All of them in different datacenters, 3 in europe, 3 in north america, 1 in brazil and one in asia. We also have 3 more servers, 1 for the front end, one for "stats" and one for dcrdata. ([#general](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153166757139590QIHHB:decred.org))
 
 On the mining side, Luxor [started](https://www.reddit.com/r/decred/comments/8xptci/luxor_tech_chinese_pools/) a new set of pool servers inside mainland China, while [zpool](https://www.zpool.ca/) has [enabled](https://twitter.com/_zpool_/status/1020751950327922689) Decred mining.
 
@@ -82,10 +82,10 @@ A pack of Stakey Telegram stickers is now [available](https://twitter.com/dcrsta
 Attended:
 
 * [Presentation](https://twitter.com/DeCredBAB/status/1016754321940197376) in Austin, USA. {TODO: Confirm}
-* [Meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-currencies-core-chains-the-future-of-blockchain-governance-and-tickets-47586593783) in Berlin, Germany hosted by BlueYard Capital. @jz_bz and @lftherios discussed open source incentivization, the value of governance and their respective projects @decredproject and @oscoin. See @issedjur's feedback [here](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153225518942700Ojtns:decred.org). (photos: [1](https://twitter.com/DanielSchuHi/status/1019649576217858048), [2](https://twitter.com/theobtl/status/1019676848127664130), [3](https://twitter.com/NoahPierau/status/1019644267042689027))
-* [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA. @raedah's [talk](https://conferences.oreilly.com/oscon/oscon-or/public/schedule/detail/71553) was "Decentralizing decision-making on the blockchain". Read his report [here](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153211410642097xnoCd:decred.org) and see on the photos how the Big Stakey was entertaining the public.  (photos: [1](https://twitter.com/miket18087954/status/1019657304671567873), [2](https://twitter.com/miket18087954/status/1020099092792217601), [3](https://twitter.com/CoffeeSippa/status/1019700563955539968))
+* [Meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-currencies-core-chains-the-future-of-blockchain-governance-and-tickets-47586593783) in Berlin, Germany hosted by BlueYard Capital. @jz_bz and @lftherios discussed open source incentivization, the value of governance and their respective projects @decredproject and @oscoin. See @issedjur's feedback [here](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153225518942700Ojtns:decred.org). (photos: [1](https://twitter.com/DanielSchuHi/status/1019649576217858048), [2](https://twitter.com/theobtl/status/1019676848127664130), [3](https://twitter.com/NoahPierau/status/1019644267042689027))
+* [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA. @raedah's [talk](https://conferences.oreilly.com/oscon/oscon-or/public/schedule/detail/71553) was "Decentralizing decision-making on the blockchain". Read his report [here](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153211410642097xnoCd:decred.org) and see on the photos how the Big Stakey was entertaining the public.  (photos: [1](https://twitter.com/miket18087954/status/1019657304671567873), [2](https://twitter.com/miket18087954/status/1020099092792217601), [3](https://twitter.com/CoffeeSippa/status/1019700563955539968))
 
-  > oregonisaac: many open source devs at OSCON were VERY interested in Politeia and it was probably the #1 hook that resulted in lots of long conversations about what makes Decred unique from the ground up. ([#politeia](https://view.matrix.org/room/!VFRvyndKpzcLrVslQD:decred.org/?anchor=$153212685842246TYtJv:decred.org))
+  > oregonisaac: many open source devs at OSCON were VERY interested in Politeia and it was probably the #1 hook that resulted in lots of long conversations about what makes Decred unique from the ground up. ([#politeia](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153212685842246TYtJv:decred.org))
 * [Blockchain Meetup](https://www.meetup.com/Blockchain-Meetup-Faro-Algarve/events/252403886/) in Faro, Portugal. Marco Peereboom gave a talk "Decred 101" and answered questions.
 
 Upcoming:
@@ -151,16 +151,16 @@ Comm systems update:
 
 Articles:
 
-* On-Chain Vote Buying and the Rise of Dark DAOs ([hackingdistributed.com](http://hackingdistributed.com/2018/07/02/on-chain-vote-buying/)) received an accurate [comment](https://www.reddit.com/r/decred/comments/8vrpy3/on_chain_vote_buying_and_the_rise_of_dark_daos/) by @davecgh and a timely [response article](https://medium.com/@richardred/response-to-on-chain-vote-buying-and-the-rise-of-dark-daos-b479deb37fb7) by Richard Red, in addition to discussions in [#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153059579631036HhqiK:decred.org), [#governance](https://decred.slack.com/archives/CAAMEU56W/p1530611461000047) and [#random](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153058882030989jOuuh:decred.org).
+* On-Chain Vote Buying and the Rise of Dark DAOs ([hackingdistributed.com](http://hackingdistributed.com/2018/07/02/on-chain-vote-buying/)) received an accurate [comment](https://www.reddit.com/r/decred/comments/8vrpy3/on_chain_vote_buying_and_the_rise_of_dark_daos/) by @davecgh and a timely [response article](https://medium.com/@richardred/response-to-on-chain-vote-buying-and-the-rise-of-dark-daos-b479deb37fb7) by Richard Red, in addition to discussions in [#general](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153059579631036HhqiK:decred.org), [#governance](https://decred.slack.com/archives/CAAMEU56W/p1530611461000047) and [#random](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153058882030989jOuuh:decred.org).
 * It's Too Soon for On-Chain Governance ([coindesk.com](https://www.coindesk.com/soon-chain-governance/)) discussed on [Reddit](https://www.reddit.com/r/decred/comments/8wdrsa/its_too_soon_for_onchain_governance_by_michael_j/).
 
 Twitter: Ari Paul [debates](https://twitter.com/aridavidpaul/status/1019356211978874880) "There can be only one" aka "highlander argument".
 
 Reddit and Forum: [how](https://www.reddit.com/r/decred/comments/8wmpnf/is_the_average_staking_time_lower_if_there_are/) ticket pool size influences average vote time; roadmap [concerns](https://www.reddit.com/r/decred/comments/8ws4ew/daes_and_roadmap_query/); [why](https://www.reddit.com/r/decred/comments/8z46j5/why_have_ticket_prices_been_so_volatile_over_the/) ticket price was volatile; [ideas](https://www.reddit.com/r/Dcrtrader/comments/8rf7qp/dcr_trader_has_a_reddit_chat_now/) for using Reddit chat for r/dcrtrader and alternative chat systems; insette's [write-up](https://www.reddit.com/r/decred/comments/90sdif/group_and_the_potential_of_pow_minervalidated/) on Andrew Stone's GROUP proposal for miner-validated tokenization that is superior to current OP\_RETURN-based schemes; James Liu's [paper](https://www.reddit.com/r/decred/comments/91ckg8/extending_atomic_swaps_to_financial_derivatives/) to extend atomic swaps to financial derivatives; [what happens](https://www.reddit.com/r/decred/comments/91tryl/what_happens_after_all_dcrs_are_mined/) when all DCR are mined, tail emission and incentives for miners.
 
-Chats: [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153090455433548QNlFj:decred.org) tickets don't have 100% chance to vote; [ideas](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153125687135698lmQRO:decred.org) for more straightforward marketing; long-running [chat](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153144666238238HtaLA:decred.org) about world economy and failure modes; @brandon's [thoughts](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153161313239389IqJUC:decred.org) on tokenizing everything, ICOs, securities, sidechains and more; [challenges](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153192145141235HURRx:decred.org) of staking with Trezor; [ideas](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153219648842589QqFwE:decred.org) how to use CryptoSteel wallet with Decred; [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153221763542646xEpak:decred.org) exchange can't stake your coins, how staking can increase security, why the function to export seed from wallet is bad idea and why dcrwallet doesn't ever store the seed; ticket voting [math](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153240577043548fppqA:decred.org); [discussion](https://view.matrix.org/room/!HEeJkbPRpAqgAwhXWO:decred.org/?anchor=$153304069846768SCrcO:decred.org) about how GitHub workflow forces to depend on modern web browser and possible alternatives; [funding](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153305558047047cLtXU:decred.org) marketing and education in developing markets, vetting contractors based on deliverables, "Decred contractor clearance", continued in [#governance](https://view.matrix.org/room/!tIDEIWechmqCLjPiui:decred.org/?anchor=$153321784148272BrmTU:decred.org).
+Chats: [why](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153090455433548QNlFj:decred.org) tickets don't have 100% chance to vote; [ideas](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153125687135698lmQRO:decred.org) for more straightforward marketing; long-running [chat](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153144666238238HtaLA:decred.org) about world economy and failure modes; @brandon's [thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153161313239389IqJUC:decred.org) on tokenizing everything, ICOs, securities, sidechains and more; [challenges](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153192145141235HURRx:decred.org) of staking with Trezor; [ideas](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153219648842589QqFwE:decred.org) how to use CryptoSteel wallet with Decred; [why](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153221763542646xEpak:decred.org) exchange can't stake your coins, how staking can increase security, why the function to export seed from wallet is bad idea and why dcrwallet doesn't ever store the seed; ticket voting [math](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153240577043548fppqA:decred.org); [discussion](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153304069846768SCrcO:decred.org) about how GitHub workflow forces to depend on modern web browser and possible alternatives; [funding](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153305558047047cLtXU:decred.org) marketing and education in developing markets, vetting contractors based on deliverables, "Decred contractor clearance", continued in [#governance](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153321784148272BrmTU:decred.org).
 
-[#dex](https://view.matrix.org/room/!MfifnUCLrfSeRkMDwZ:decred.org/?anchor=$153041236730049nZJvN:decred.org&offset=-30) channel continues to attract thinkers and host chats about influence of exchanges, regulation, HFT, lot sizes, liquidity, on-chain vs off-chain swaps, to name a few topics. [#governance](https://view.matrix.org/room/!tIDEIWechmqCLjPiui:decred.org/) also keeps growing and hosting high quality conversations.
+[#dex](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$153041236730049nZJvN:decred.org&offset=-30) channel continues to attract thinkers and host chats about influence of exchanges, regulation, HFT, lot sizes, liquidity, on-chain vs off-chain swaps, to name a few topics. [#governance](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/) also keeps growing and hosting high quality conversations.
 
 # Markets
 
