--- a/journal/201807.md
+++ b/journal/201807.md
@@ -160,7 +160,7 @@ Reddit and Forum: [how](https://www.reddit.com/r/decred/comments/8wmpnf/is_the_a
 
 Chats: [why](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153090455433548QNlFj:decred.org) tickets don't have 100% chance to vote; [ideas](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153125687135698lmQRO:decred.org) for more straightforward marketing; long-running [chat](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153144666238238HtaLA:decred.org) about world economy and failure modes; @brandon's [thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153161313239389IqJUC:decred.org) on tokenizing everything, ICOs, securities, sidechains and more; [challenges](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153192145141235HURRx:decred.org) of staking with Trezor; [ideas](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153219648842589QqFwE:decred.org) how to use CryptoSteel wallet with Decred; [why](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153221763542646xEpak:decred.org) exchange can't stake your coins, how staking can increase security, why the function to export seed from wallet is bad idea and why dcrwallet doesn't ever store the seed; ticket voting [math](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153240577043548fppqA:decred.org); [discussion](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153304069846768SCrcO:decred.org) about how GitHub workflow forces to depend on modern web browser and possible alternatives; [funding](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153305558047047cLtXU:decred.org) marketing and education in developing markets, vetting contractors based on deliverables, "Decred contractor clearance", continued in [#governance](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153321784148272BrmTU:decred.org).
 
-[#dex](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$153041236730049nZJvN:decred.org&offset=-30) channel continues to attract thinkers and host chats about influence of exchanges, regulation, HFT, lot sizes, liquidity, on-chain vs off-chain swaps, to name a few topics. [#governance](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/) also keeps growing and hosting high quality conversations.
+[#dex](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$153044958530137UiGxN:decred.org) channel continues to attract thinkers and host chats about influence of exchanges, regulation, HFT, lot sizes, liquidity, on-chain vs off-chain swaps, to name a few topics. [#governance](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153064378831958rSgqw:decred.org) also keeps growing and hosting high quality conversations.
 
 # Markets
 
