--- a/journal/201807.md
+++ b/journal/201807.md
@@ -198,7 +198,7 @@ This is the 4th issue of Decred Journal. It is mirrored on [GitHub](https://xaur
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-We continue transitioning to use chat links to Matrix web view. One UX inconvenience in the web viewer is that it always shows linked message at the bottom (highlighted in yellow) and you have to click "Show newer messages" to read on. This is filed as bug [here](https://github.com/t3chguy/matrix-static/issues/60).
+Chat links were changed to [riot.im](https://riot.im/app/) from the static [web viewer](https://view.matrix.org/) that suffered from UX issues (filed [here](https://github.com/t3chguy/matrix-static/issues/60) and [here](https://github.com/t3chguy/matrix-static/issues/65)). We will consider changing back to the static viewer once they are resolved because it does not require javascript to read chat logs.
 
 In the previous issue we introduced "Featured articles". The judgement is subjective by definition, if you feel unfairness or want to debate the criteria please check [this issue](https://github.com/xaur/decred-news/issues/21).
 
