--- a/journal/201807.md
+++ b/journal/201807.md
@@ -206,4 +206,4 @@ Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github
 
 Contributions are also welcome, some areas are adding content, pre-release review or translations to other languages.
 
-Credits (Slack names, alphabetical order): {}, {}.
+Credits (Slack names, alphabetical order): bee, Haon and Richard-Red.
