--- a/journal/201807.md
+++ b/journal/201807.md
@@ -92,7 +92,7 @@ Upcoming:
 
 * [Meetup](https://www.meetup.com/Social-at-The-Block-Cafe/events/253103196/) in Lisbon, Portugal on Aug 2. @moo31337 and @mm will be presenting on Decred with talk "Decred 101 - Governance with skin in the game". Co-hosted by The Block Cafe. Free entrance.
 * [Meetup](https://alysida.kktix.cc/events/b-c-meetup) in Taipei, Taiwan on Aug 5. @morphymore [will give](https://twitter.com/morphymore/status/1024844774442856448) a short intro on Decred.
-* [OKEx Global Meetup Tour](https://www.eventbrite.hk/e/okex-global-meetup-tour-2018-vietnam-tickets-48107057504) in Ho Chi Minh City, Vietnam on Aug 9. 
+* [OKEx Global Meetup Tour](https://www.eventbrite.hk/e/okex-global-meetup-tour-2018-vietnam-tickets-48107057504) in Ho Chi Minh City, Vietnam on Aug 9. @joshuam will introduce Decred and on-chain governance and take part in a panel discussion.
 * [Blockchain & Decentralised Governance Panel](https://www.facebook.com/events/285036208715647/) in Melbourne, Australia on Aug 13. Hosted by YBF Ventures.
 * [Voice of Blockchain](https://chicagoblockchainproject.com/voice-of-blockchain/) in Chicago, USA on Aug 24-25. {get more info}
 
