Add featured pic

--- a/journal/201807.md
+++ b/journal/201807.md
@@ -1,6 +1,6 @@
 # {DRAFT} Decred Journal – July 2018 {DRAFT}
 
-![{alt text}](../img/{file.jpg} "{hover text}")
+![Decred people at OSCON](../img/oscon-300.jpg "Decred people at O'Reilly Open Source Convention")
 
 # Development
 
