Resolve Marketing targ. adv.

--- a/journal/201807.md
+++ b/journal/201807.md
@@ -69,11 +69,11 @@ On the OTC trading front, @i2Rav from [i2trading](https://i2trading.com/) report
 
 # Marketing
 
-Targeted advertising reports for [June](https://www.reddit.com/r/decred/comments/8xgrv4/monthly_targeted_ads_report/) and [July]({wait for release or drop this}) released. Reach @timhebel for full versions.
+Targeted advertising report for June [released](https://www.reddit.com/r/decred/comments/8xgrv4/monthly_targeted_ads_report/). The July report will be posted shortly on [Reddit](https://www.reddit.com/r/decred/). As usual, reach @timhebel for full versions.
 
-June:
+> Big news in June: Facebook reversed their policy on banning crypto ads. ICO ads are still banned, but we should be OK. My team filled out the appeal today, so we should hopefully hear something within a few days. (u/timhebel on [reddit](https://www.reddit.com/r/decred/comments/8xgrv4/monthly_targeted_ads_report/))
 
-> Big news this month: Facebook reversed their policy on banning crypto ads. ICO ads are still banned, but we should be OK. My team filled out the appeal today, so we should hopefully hear something within a few days. (u/timhebel on [reddit](https://www.reddit.com/r/decred/comments/8xgrv4/monthly_targeted_ads_report/))
+After couple weeks Facebook finally responded to the appeal and the next step is to verify the domain name via DNS.
 
 A pack of Stakey Telegram stickers is now [available](https://twitter.com/dcrstakey/status/1021894556978163712). Have fun!
 
